Add Netlify proxy for backend API to fix cross-origin cookie issues

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,20 @@
   publish = "."
   command = "echo 'No build needed - static site'"
 
-# Redirect all requests to index.html for single-page app behavior
+# Proxy API requests to backend (must come before catch-all)
+[[redirects]]
+  from = "/api/*"
+  to = "https://portfolio-backend-cl6s.onrender.com/api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/uploads/*"
+  to = "https://portfolio-backend-cl6s.onrender.com/uploads/:splat"
+  status = 200
+  force = true
+
+# Redirect all other requests to index.html for single-page app behavior
 [[redirects]]
   from = "/*"
   to = "/index.html"
